# Lab_progAvanzata

./: .gitignore  README.dm  README.md
codice/client1/: Cargo.toml
codice/client1/src/: client1_ui.rs  communication.rs  fragment_reassembler.rs  lib.rs  logger.rs  main.rs
codice/client1/src/test/: file1
codice/client2/: Cargo.toml
codice/client2/src/: client2_ui.rs  lib.rs  logger.rs  main.rs  repackager.rs
codice/common/: Cargo.toml
codice/common/src/: client_ui.rs  get_drone_impl.rs  lib.rs
codice/drone/: Cargo.toml
codice/drone/src/: main.rs
codice/network_init/: .gitignore  3.mp4.mp3ss  C:\Temp\log.txt  Cargo.toml  flake.nix  grafo.dot  log.txt  log_Server.txt  network_config.toml  text3.txt  topologia.dot
codice/network_init/src/: config.rs  initializer.rs  log.txt  main.rs  network_config.toml  validation.rs
codice/network_init/src/ui/: app.rs
codice/server/: Cargo.toml
codice/server/src/: interface.rs  lib.rs  logger.rs  main.rs  message.rs
codice/simulation_controller/: Cargo.toml
codice/simulation_controller/src/: colored_data.rs  forwarded_event.rs  get_drone_impl.rs  lib.rs  network_graph.rs  node_stats.rs  packet_animation.rs  simulation_controller.rs  simulation_controller_ui.rs  ui_commands.rs
