[package]
name = "client1"
version = "0.1.0"
edition = "2021"


[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize","debug"] }
rand = "0.9.0-beta.3"
crossbeam-channel = "0.5.14"
egui = "0.30"
eframe = { version = "0.30", features = ["default"] }
[lib]
name = "client1"
path = "src/lib.rs"
