[package]
name = "client1"
version = "0.1.0"
edition = "2021"


[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize","debug"] }
rand = "0.9.0-beta.3"
crossbeam-channel = "0.5.14"
egui = "0.30"
eframe = { version = "0.30", features = ["default"] }
base64 = "0.22.1"
image = "0.25.6"
rodio = "0.17"
egui_extras = { version = "0.30", features = ["image"] }

common = { path = "../common" }
[lib]
name = "client1"
path = "src/lib.rs"
