[package]
name = "client2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-beta.3"
crossbeam-channel = "0.5.13"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
    "debug",
] }
egui = "0.30"
eframe = { version = "0.30", features = ["default"] }
base64 = "0.22.1"
image = "0.25.6"
common = { path = "../common" }

[lib]
name = "client2"
path = "src/lib.rs"
