[package]
name = "network_init"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
    "debug",
] }
bagel_bomber = { git = "https://github.com/daw-dev/bagel-bomber.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }
null-pointer-drone = { git = "https://github.com/The-Null-Pointer-Patrol/null-pointer-drone.git" }
rustafarian-drone = { git = "https://github.com/Rustafarian-Unitn/rustafarian-drone" }
rustastic-drone = { git = "https://github.com/Rustastic/RustasticDrone.git" }
getdroned = { git = "https://github.com/GetDroned/Drone.git" }
rusty_drones = { git = "https://github.com/rusty-drone-2024/rusty-drone.git" }
rust-roveri = { git = "https://git@github.com/RustRoveri/rust-roveri.git" }
rust_do_it = { git = "https://github.com/RustDoIt/Drone.git" }
trust_drone = { git = "https://github.com/Beto-prog/TrustDone", package = "drone" }

simulation_controller = { path = "../simulation_controller" }
crossbeam-channel = "0.5.13"
