[package]
name = "network_init"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
    "debug",
] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["default"] }

simulation_controller = { path = "../simulation_controller" }
server = { path = "../server" }
client1 = { path = "../client1" }
client2 = { path = "../client2" }
common = { path = "../common" }
crossbeam-channel = "0.5.13"
