[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5.13"
rand = "0.8.5"
colored = "3.0.0"
ratatui = "0.26"
crossterm = "0.27"
once_cell = "1.21.3"


[lib]
name = "server"
path = "src/lib.rs"
