[package]
name = "simulation_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "serialize",
    "debug",
] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["default"] }
common =  { path = "../common" }
egui_graphs = "0.25.1"
petgraph = "0.8.2"


[lib]
name = "simulation_controller"
path = "src/lib.rs"
